# baiser

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  clippy.yml  format.yml  tests.yml
src/: bezier.rs  composed_curve.rs  curve.rs  curve_iterator.rs  curve_point.rs  distance.rs  lib.rs  linear_speed.rs  point.rs  smooth_array.rs
